--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,71 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  margin: 0;
+  background-color: #0B2434;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+main {
+  display: flex;
+  margin: 5% 0;
+  width: 90vh;
+  height: 90vh;
+  min-width: 550px;
+  min-height: 550px;
+  border-radius: 10px;
+  background-color: antiquewhite;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: column;
+}
+.description {
+  text-align: center;
+  max-width: 400px;
+}
+.description > p {
+  font-size: 1.25em;
+}
+.dice-container {
+  display: grid;
+  grid-template-columns: auto auto auto auto auto;
+  grid-template-rows: auto auto;
+  gap: 40px;
+}
+.box {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 70px;
+  height: 70px;
+  background:  #fff;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
+  border-radius: 10px;
+  font-weight: 700;
+  font-size: 2rem;
+  cursor: pointer;
+}
+.held-box {
+  background: #59E391;
+}
+.roll-button {
+  font-family: 'Karla', sans-serif;
+  width: 120px;
+  height: 50px;
+  font-size: 1.4em;
+  border: none;
+  background-color: #5035FF;
   color: white;
+  border-radius: 3.81px;
+  justify-self: center;
+  align-self: center;
+  cursor: pointer;
 }
-
-.App-link {
-  color: #61dafb;
+.roll-button:focus {
+  outline: none;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.roll-button:active {
+  box-shadow: inset 5px 5px 10px -3px rgba(0, 0, 0, 0.7);
 }
