--- a/src/App.css
+++ b/src/App.css
@@ -1,71 +1,81 @@
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 body {
-  margin: 0;
-  background-color: #0B2434;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+	margin: 0;
+	background-color: #0b2434;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 main {
-  display: flex;
-  margin: 5% 0;
-  width: 90vh;
-  height: 90vh;
-  min-width: 550px;
-  min-height: 550px;
-  border-radius: 10px;
-  background-color: antiquewhite;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-direction: column;
+	display: flex;
+	margin: 5% 0;
+	width: 90vh;
+	height: 90vh;
+	min-width: 550px;
+	min-height: 550px;
+	border-radius: 10px;
+	background-color: antiquewhite;
+	justify-content: space-evenly;
+	align-items: center;
+	flex-direction: column;
 }
 .description {
-  text-align: center;
-  max-width: 400px;
+	text-align: center;
+	max-width: 400px;
 }
 .description > p {
-  font-size: 1.25em;
+	font-size: 1.25em;
 }
 .dice-container {
-  display: grid;
-  grid-template-columns: auto auto auto auto auto;
-  grid-template-rows: auto auto;
-  gap: 40px;
+	display: grid;
+	grid-template-columns: auto auto auto auto auto;
+	grid-template-rows: auto auto;
+	gap: 40px;
 }
 .box {
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  width: 70px;
-  height: 70px;
-  background:  #fff;
-  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
-  border-radius: 10px;
-  font-weight: 700;
-  font-size: 2rem;
-  cursor: pointer;
+	display: inline-flex;
+	justify-content: center;
+	align-items: center;
+	width: 70px;
+	height: 70px;
+	background: #fff;
+	box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
+	border-radius: 10px;
+	font-weight: 700;
+	font-size: 2rem;
+	cursor: pointer;
 }
 .held-box {
-  background: #59E391;
+	background: #59e391;
 }
 .roll-button {
-  font-family: 'Karla', sans-serif;
-  width: 120px;
-  height: 50px;
-  font-size: 1.4em;
-  border: none;
-  background-color: #5035FF;
-  color: white;
-  border-radius: 3.81px;
-  justify-self: center;
-  align-self: center;
-  cursor: pointer;
+	font-family: 'Karla', sans-serif;
+	width: 120px;
+	height: 50px;
+	font-size: 1.4em;
+	border: none;
+	background-color: #5035ff;
+	color: white;
+	border-radius: 3.81px;
+	justify-self: center;
+	align-self: center;
+	cursor: pointer;
 }
 .roll-button:focus {
-  outline: none;
+	outline: none;
 }
 .roll-button:active {
-  box-shadow: inset 5px 5px 10px -3px rgba(0, 0, 0, 0.7);
+	box-shadow: inset 5px 5px 10px -3px rgba(0, 0, 0, 0.7);
 }
+.mt-5 {
+	margin-top: 16px;
+}
+
+#modal--button {
+	width: 80px;
+	height: 40px;
+	font-size: 1.2em;
+}
+
