--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,7 @@ main {
 	grid-template-rows: auto auto;
 	gap: 40px;
 }
-.box {
+/* .box {
 	display: inline-flex;
 	justify-content: center;
 	align-items: center;
@@ -46,10 +46,8 @@ main {
 	font-weight: 700;
 	font-size: 2rem;
 	cursor: pointer;
-}
-.held-box {
-	background: #59e391;
-}
+} */
+
 .roll-button {
 	font-family: 'Karla', sans-serif;
 	width: 120px;
