--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,8 @@ main {
 	display: grid;
 	grid-template-columns: auto auto auto auto auto;
 	grid-template-rows: auto auto;
-	gap: 40px;
+	gap: 20px;
+	min-width: 530px;
 }
 /* .box {
 	display: inline-flex;
@@ -76,4 +77,8 @@ main {
 	height: 40px;
 	font-size: 1.2em;
 }
+
+/* todo: add a media query for devices less than 550px viewport width
+   consider the minumum as 360px
+*/
 
